minor changes according to code-review

--- a/Ch03-Keras-and-Data-Retrieval/3.1.Keras_APIs.ipynb
+++ b/Ch03-Keras-and-Data-Retrieval/3.1.Keras_APIs.ipynb
@@ -43,6 +43,7 @@
     "import numpy as np\n",
     "import tensorflow as tf\n",
     "import pandas as pd\n",
+    "import random\n",
     "from sklearn.decomposition import PCA\n",
     "\n",
     "from tensorflow.keras import layers\n",
@@ -547,6 +548,10 @@
     "    Dense(16, activation='relu'),\n",
     "    Dense(3, activation='softmax')\n",
     "])\n",
+    "\n",
+    "# Print out a summary of the model\n",
+    "model.summary() \n",
+    "\n",
     "# Compiling the model with a loss function, an optimizer and a performance metric\n",
     "model.compile(loss='categorical_crossentropy', optimizer='adam', metrics=['acc'])\n",
     "\n",
@@ -566,28 +571,6 @@
     "\n",
     "* The original inputs\n",
     "* PCA features (i.e. 2 pricipal components) of the original inputs"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Compute the PCA features\n",
-    "\n",
-    "Here we compute the PCA features using the original data. We will only get the first two principal components."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.decomposition import PCA\n",
-    "# Defining a PCA transformer\n",
-    "pca_model = PCA(n_components=2, random_state=4321)\n",
-    "# Generating the PCA features from data\n",
-    "x_pca = pca_model.fit_transform(x)"
    ]
   },
   {
@@ -674,6 +657,28 @@
     "model.compile(loss='categorical_crossentropy', optimizer='adam', metrics=['acc'])\n",
     "\n",
     "model.summary()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Compute the PCA features\n",
+    "\n",
+    "Here we compute the PCA features using the original data. We will only get the first two principal components."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.decomposition import PCA\n",
+    "# Defining a PCA transformer\n",
+    "pca_model = PCA(n_components=2, random_state=4321)\n",
+    "# Generating the PCA features from data\n",
+    "x_pca = pca_model.fit_transform(x)"
    ]
   },
   {
