--- a/Ch03-Keras-and-Data-Retrieval/3.2.Creating_Input_Pipelines.ipynb
+++ b/Ch03-Keras-and-Data-Retrieval/3.2.Creating_Input_Pipelines.ipynb
@@ -42,6 +42,8 @@
    ],
    "source": [
     "import os\n",
+    "import random\n",
+    "import numpy as np\n",
     "import requests\n",
     "from zipfile import ZipFile\n",
     "import tensorflow as tf\n",
@@ -437,11 +439,19 @@
     "# Shuffle the data so that we get a mix of labels in every batch\n",
     "data_ds = data_ds.shuffle(buffer_size= 20)\n",
     "# Define a batch of size 5 \n",
-    "data_ds = data_ds.batch(5)\n",
+    "data_ds = data_ds.batch(5)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Iterate through the data to see what it contains\n",
     "for item in data_ds:\n",
     "    print(item)\n",
-    "    break\n"
+    "    break"
    ]
   },
   {
