Fixed code listing /section annotations

--- a/Ch03-Keras-and-Data-Retrieval/3.1.Keras_APIs.ipynb
+++ b/Ch03-Keras-and-Data-Retrieval/3.1.Keras_APIs.ipynb
@@ -674,6 +674,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Section 3.1\n",
+    "\n",
     "from sklearn.decomposition import PCA\n",
     "# Defining a PCA transformer\n",
     "pca_model = PCA(n_components=2, random_state=4321)\n",
