--- a/Ch04-Deep-Networks-with-Keras/4.2.Convolution_networks.ipynb
+++ b/Ch04-Deep-Networks-with-Keras/4.2.Convolution_networks.ipynb
@@ -246,7 +246,7 @@
    "source": [
     "## Defining the model\n",
     "\n",
-    "Let's define a CNN model. But wait, we are getting an error trying to run this model. This is because, one needs to be careful of the output sizes of the model's each layer. In this case, the model we created has led to an invalid height and width dimensions causing an error."
+    "Let's define a CNN model. But wait, we are getting an error trying to run this model. This is because, one needs to be careful of the output sizes of the model's each layer. In this case, the model we created has led to an invalid height and width dimensions **causing an error**."
    ]
   },
   {
@@ -288,7 +288,7 @@
    ],
    "source": [
     "# Section 4.2\n",
-    "# Code listing 4.3\n",
+    "# Code listing 4.2\n",
     "\n",
     "from tensorflow.keras import layers, models\n",
     "import tensorflow.keras.backend as K\n",
@@ -321,7 +321,7 @@
    "outputs": [],
    "source": [
     "# Section 4.2\n",
-    "# Code listing 4.4\n",
+    "# Code listing 4.3\n",
     "\n",
     "from tensorflow.keras import layers, models\n",
     "import tensorflow.keras.backend as K\n",
