--- a/Ch04-Deep-Networks-with-Keras/4.3.Recurrent_networks.ipynb
+++ b/Ch04-Deep-Networks-with-Keras/4.3.Recurrent_networks.ipynb
@@ -436,7 +436,7 @@
    ],
    "source": [
     "# Section 4.3\n",
-    "# Code listing 4.5\n",
+    "# Code listing 4.4/Code listing 4.5\n",
     "\n",
     "import numpy as np\n",
     "\n",
