--- a/Ch05-Fundamentals-of-Transformers/5.1.Transformer.ipynb
+++ b/Ch05-Fundamentals-of-Transformers/5.1.Transformer.ipynb
@@ -427,7 +427,7 @@
    "outputs": [],
    "source": [
     "# Section 5.2\n",
-    "# Code listing 5.4\n",
+    "# Code listing 5.5\n",
     "\n",
     "import tensorflow as tf\n",
     "\n",
@@ -460,9 +460,16 @@
     "        # Fully connected layer output\n",
     "        y = self.fc_layer(h1)\n",
     "        \n",
-    "        return y\n",
-    "\n",
-    "# Code listing 5.5\n",
+    "        return y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Code listing 5.6\n",
     "class DecoderLayer(layers.Layer):\n",
     "    \"\"\" The decoder layer \"\"\"\n",
     "    def __init__(self, d, n_heads):\n",
@@ -491,7 +498,7 @@
     "        # Multi head attention layer output (from encoder outputs)\n",
     "        h2 = compute_multihead_output(self.attn_heads, h1, en_x)\n",
     "        y = self.fc_layer(h2)\n",
-    "        return y\n"
+    "        return y"
    ]
   },
   {
@@ -543,7 +550,7 @@
    ],
    "source": [
     "# Section 5.2\n",
-    "# Code listing 5.6\n",
+    "# Code listing 5.7\n",
     "\n",
     "import tensorflow as tf\n",
     "\n",
