Added code listing annotations and section annotations. shuffled some of the code cells to match section ordering in the manuscript

--- a/Ch06-Image-Classification-with-CNNs/6.1.Image_Classification.ipynb
+++ b/Ch06-Image-Classification-with-CNNs/6.1.Image_Classification.ipynb
@@ -103,6 +103,8 @@
     }
    ],
    "source": [
+    "#Section 6.1 \n",
+    "\n",
     "import os\n",
     "import requests\n",
     "import zipfile\n",
@@ -333,6 +335,9 @@
     }
    ],
    "source": [
+    "#Section 6.1\n",
+    "#Code listing 6.1\n",
+    "\n",
     "import os\n",
     "import pandas as pd\n",
     "\n",
@@ -448,6 +453,8 @@
     }
    ],
    "source": [
+    "#Section 6.1\n",
+    "\n",
     "import os\n",
     "def get_image_count(data_dir):  \n",
     "    \"\"\" Counts the number of jpeg files in a given folder\"\"\"\n",
@@ -598,6 +605,9 @@
     }
    ],
    "source": [
+    "#Section 6.1\n",
+    "#Code listing 6.2\n",
+    "\n",
     "import os\n",
     "from PIL import Image\n",
     "import pandas as pd\n",
@@ -888,6 +898,8 @@
     }
    ],
    "source": [
+    "#Section 6.2\n",
+    "\n",
     "from functools import partial\n",
     "\n",
     "def get_test_labels_df(test_labels_path):\n",
@@ -1005,11 +1017,27 @@
    },
    "outputs": [],
    "source": [
+    "# Section 6.3\n",
     "from tensorflow.keras.layers import Input, Conv2D, MaxPool2D, AvgPool2D, Dense, Concatenate, Flatten, Lambda, Dropout\n",
     "from tensorflow.keras.models import Model\n",
     "from tensorflow.keras.losses import CategoricalCrossentropy\n",
     "import tensorflow.keras.backend as K\n",
     "\n",
+    "# Code listing 6.3\n",
+    "def stem(inp):\n",
+    "    conv1 = Conv2D(64, (7,7), strides=(1,1), activation='relu', padding='same')(inp)\n",
+    "    maxpool2 = MaxPool2D((3,3), strides=(2,2), padding='same')(conv1)\n",
+    "    lrn3 = Lambda(lambda x: tf.nn.local_response_normalization(x))(maxpool2)\n",
+    "\n",
+    "    conv4 = Conv2D(64, (1,1), strides=(1,1), padding='same')(lrn3)\n",
+    "    conv5 = Conv2D(192, (3,3), strides=(1,1), activation='relu', padding='same')(conv4)\n",
+    "    lrn6 = Lambda(lambda x: tf.nn.local_response_normalization(x))(conv5)\n",
+    "\n",
+    "    maxpool7 = MaxPool2D((3,3), strides=(1,1), padding='same')(lrn6)\n",
+    "\n",
+    "    return maxpool7\n",
+    "\n",
+    "# Code listing 6.4\n",
     "def inception(inp, n_filters):\n",
     "\n",
     "    # 1x1 layer\n",
@@ -1031,26 +1059,14 @@
     "    out = Concatenate(axis=-1)([out1, out2_2, out3_2, out4_2])\n",
     "    return out\n",
     "\n",
+    "# Code listing 6.5\n",
     "def aux_out(inp,name=None):    \n",
     "    avgpool1 = AvgPool2D((5,5), strides=(3,3), padding='valid')(inp)\n",
     "    conv1 = Conv2D(128, (1,1), activation='relu', padding='same')(avgpool1)\n",
     "    flat = Flatten()(conv1)\n",
     "    dense1 = Dense(1024, activation='relu')(flat)    \n",
     "    aux_out = Dense(200, activation='softmax', name=name)(dense1)\n",
-    "    return aux_out\n",
-    "\n",
-    "def stem(inp):\n",
-    "    conv1 = Conv2D(64, (7,7), strides=(1,1), activation='relu', padding='same')(inp)\n",
-    "    maxpool2 = MaxPool2D((3,3), strides=(2,2), padding='same')(conv1)\n",
-    "    lrn3 = Lambda(lambda x: tf.nn.local_response_normalization(x))(maxpool2)\n",
-    "\n",
-    "    conv4 = Conv2D(64, (1,1), strides=(1,1), padding='same')(lrn3)\n",
-    "    conv5 = Conv2D(192, (3,3), strides=(1,1), activation='relu', padding='same')(conv4)\n",
-    "    lrn6 = Lambda(lambda x: tf.nn.local_response_normalization(x))(conv5)\n",
-    "\n",
-    "    maxpool7 = MaxPool2D((3,3), strides=(1,1), padding='same')(lrn6)\n",
-    "\n",
-    "    return maxpool7\n"
+    "    return aux_out\n"
    ]
   },
   {
@@ -1300,6 +1316,8 @@
     }
    ],
    "source": [
+    "# Section 6.3\n",
+    "# Code listing 6.6\n",
     "def inception_v1():\n",
     "    \n",
     "    K.clear_session()\n",
@@ -1353,6 +1371,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Section 6.4\n",
+    "\n",
     "def get_steps_per_epoch(n_data, batch_size):\n",
     "    \"\"\" Given the data size and batch size, gives the number of steps to travers the full dataset \"\"\"\n",
     "    if n_data%batch_size==0:\n",
@@ -1482,6 +1502,9 @@
     }
    ],
    "source": [
+    "# Section 6.4\n",
+    "# Code listing 6.7\n",
+    "\n",
     "from tensorflow.keras.callbacks import CSVLogger\n",
     "import time\n",
     "import os\n",
@@ -1577,6 +1600,8 @@
     }
    ],
    "source": [
+    "# Section 6.4\n",
+    "\n",
     "# Load the model from disk\n",
     "model = load_model(os.path.join('models','inception_v1_base.h5'))\n",
     "\n",
