--- a/Ch07-Improving-CNNs-and-Explaining/7.2.Transfer_Learning.ipynb
+++ b/Ch07-Improving-CNNs-and-Explaining/7.2.Transfer_Learning.ipynb
@@ -219,6 +219,9 @@
     }
    ],
    "source": [
+    "# Section 7.3\n",
+    "# Code listing 7.13\n",
+    "\n",
     "from functools import partial\n",
     "\n",
     "def get_test_labels_df(test_labels_path):\n",
@@ -365,6 +368,9 @@
     }
    ],
    "source": [
+    "# Section 7.3\n",
+    "# Section 7.12\n",
+    "\n",
     "from tensorflow.keras.applications import InceptionResNetV2\n",
     "from tensorflow.keras.models import Sequential\n",
     "from tensorflow.keras.layers import Input, Dense, Dropout\n",
@@ -403,6 +409,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Section 7.3\n",
+    "\n",
     "def get_steps_per_epoch(n_data, batch_size):\n",
     "    \"\"\" Given the data size and batch size, gives the number of steps to travers the full dataset \"\"\"\n",
     "    if n_data%batch_size==0:\n",
@@ -498,6 +506,8 @@
     }
    ],
    "source": [
+    "# Section 7.3\n",
+    "\n",
     "from tensorflow.keras.callbacks import EarlyStopping, CSVLogger, ReduceLROnPlateau\n",
     "\n",
     "n_epochs=50\n",
