--- a/Ch10-NLP-with-TF2-Language-Modelling/10.1.Language_modelling.ipynb
+++ b/Ch10-NLP-with-TF2-Language-Modelling/10.1.Language_modelling.ipynb
@@ -106,6 +106,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Section 10.1\n",
+    "\n",
+    "# Code listing 10.1\n",
+    "\n",
     "# Downloading the data\n",
     "# http://www.thespermwhale.com/jaseweston/babi/CBTest.tgz\n",
     "\n",
@@ -154,6 +158,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Code listing 10.2\n",
+    "\n",
     "def read_data(path):\n",
     "    stories = []\n",
     "\n",
@@ -266,6 +272,8 @@
     }
    ],
    "source": [
+    "# Section 10.1\n",
+    "\n",
     "from collections import Counter\n",
     "# Create a large list which contains all the words in all the reviews\n",
     "data_list = [w for doc in stories for w in doc.split(' ')]\n",
@@ -413,6 +421,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Section 10.1\n",
+    "\n",
     "from tensorflow.keras.preprocessing.text import Tokenizer\n",
     "\n",
     "# Define a tokenizer for the determined vocabulary size\n",
@@ -502,6 +512,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Section 10.1\n",
+    "\n",
+    "# Code listing 10.3\n",
     "def get_tf_pipeline(data_seq, n_seq, batch_size=64, shift=1, shuffle=True):\n",
     "    \"\"\" Define a tf.data pipeline that takes a set of sequences of text and \n",
     "    convert them to fixed length sequences for the model \"\"\"\n",
@@ -647,6 +660,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Section 10.2\n",
+    "\n",
+    "# Code listing 10.4\n",
     "K.clear_session()\n",
     "\n",
     "model = tf.keras.models.Sequential([\n",
@@ -678,6 +694,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Section 10.3\n",
+    "\n",
+    "# Code listing 10.5\n",
     "import tensorflow.keras.backend as K\n",
     "\n",
     "# Inspired by https://gist.github.com/Gregorgeous/dbad1ec22efc250c76354d949a13cec3\n",
@@ -846,6 +865,8 @@
     }
    ],
    "source": [
+    "# Section 10.4\n",
+    "\n",
     "train_ds = get_tf_pipeline(train_data_seq[:50], n_seq, shift=25, batch_size=128)\n",
     "valid_ds = get_tf_pipeline(val_data_seq, n_seq, shift=n_seq, batch_size=128)\n",
     "\n",
@@ -1016,6 +1037,10 @@
     }
    ],
    "source": [
+    "# Section 10.5\n",
+    "\n",
+    "# Code listing 10.6\n",
+    "\n",
     "# Define inputs to the model\n",
     "inp = tf.keras.layers.Input(shape=(None,))\n",
     "inp_state = tf.keras.layers.Input(shape=(1024,))\n",
@@ -1089,6 +1114,8 @@
     }
    ],
    "source": [
+    "# Section 10.5\n",
+    "\n",
     "text = get_ngrams(\n",
     "    \"CHAPTER I. Down the Rabbit-Hole Alice was beginning to get very tired of sitting by her sister on the bank ,\".lower(), \n",
     "    ngrams\n",
@@ -1115,6 +1142,7 @@
     "# Define first input to generate text recursively from\n",
     "x = np.array([[wid]])\n",
     "\n",
+    "# Code listing 10.7\n",
     "for _ in range(500):\n",
     "    \n",
     "    # Get the next output and state\n",
@@ -1169,11 +1197,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Section 10.6\n",
+    "\n",
+    "# Code listing 10.8\n",
+    "\n",
     "def beam_one_step(model, input_, state):    \n",
     "    \"\"\" Perform the model update and output for one step\"\"\"\n",
     "    output, new_state = model.predict([input_, state])\n",
     "    return output, new_state\n",
-    "\n",
     "\n",
     "\n",
     "def beam_search(model, input_, state, beam_depth=5, beam_width=3, ignore_blank=True):\n",
@@ -1264,6 +1295,10 @@
     }
    ],
    "source": [
+    "# Section 10.6\n",
+    "\n",
+    "# Code listing 10.9\n",
+    "\n",
     "text = get_ngrams(\n",
     "    \"CHAPTER I. Down the Rabbit-Hole Alice was beginning to get very tired of sitting by her sister on the bank ,\".lower(),     \n",
     "    ngrams\n",
