--- a/Ch13-Transormers-with-TF2-and-Huggingface/13.2_Question_answering_with_BERT.ipynb
+++ b/Ch13-Transormers-with-TF2-and-Huggingface/13.2_Question_answering_with_BERT.ipynb
@@ -108,6 +108,8 @@
     }
    ],
    "source": [
+    "# Section 13.3\n",
+    "\n",
     "from datasets import load_dataset\n",
     "\n",
     "dataset = load_dataset(\"squad\")\n",
@@ -175,6 +177,9 @@
     }
    ],
    "source": [
+    "# Section 13.3\n",
+    "\n",
+    "# Code listing 13.5\n",
     "def correct_indices_add_end_idx(answers, contexts):\n",
     "    \"\"\" Correct the answer index of the samples (if wrong) \"\"\"\n",
     "    \n",
@@ -305,6 +310,8 @@
     }
    ],
    "source": [
+    "# Code listing 13.6\n",
+    "\n",
     "# Encode train data\n",
     "# train_encodings -> transformers.tokenization_utils_base.BatchEncoding\n",
     "train_encodings = tokenizer(train_contexts, train_questions, truncation=True, padding=True, return_tensors='tf')\n",
@@ -340,6 +347,7 @@
     }
    ],
    "source": [
+    "# Code listing 13.7\n",
     "def update_char_to_token_positions_inplace(encodings, answers):\n",
     "    start_positions = []\n",
     "    end_positions = []\n",
@@ -394,6 +402,8 @@
     }
    ],
    "source": [
+    "# Section 13.3\n",
+    "\n",
     "import tensorflow as tf\n",
     "from functools import partial\n",
     "\n",
@@ -491,6 +501,7 @@
     "config = DistilBertConfig.from_pretrained(\"distilbert-base-uncased\", return_dict=False)\n",
     "model = TFDistilBertForQuestionAnswering.from_pretrained(\"distilbert-base-uncased\", config=config)\n",
     "\n",
+    "# Code listing 13.8\n",
     "def tf_wrap_model(model):\n",
     "    \"\"\" Wraps the huggingface's model with in the Keras Functional API \"\"\"\n",
     "    \n",
@@ -561,6 +572,8 @@
     }
    ],
    "source": [
+    "# Section 13.3\n",
+    "\n",
     "import time\n",
     "\n",
     "t1 = time.time()\n",
@@ -732,7 +745,9 @@
     }
    ],
    "source": [
+    "# Section 13.3\n",
     "\n",
+    "# Code listing 13.9\n",
     "i = 5\n",
     "\n",
     "# Define sample question\n",
