--- a/Ch14-Tensorboard/14.1_Tensorboard.ipynb
+++ b/Ch14-Tensorboard/14.1_Tensorboard.ipynb
@@ -172,6 +172,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Section 14.1\n",
+    "\n",
+    "# Code listing 14.1\n",
     "def get_train_valid_test_datasets(fashion_ds, batch_size, flatten_images=False):\n",
     "    \n",
     "    # Get the training dataset, shuffle it, and output a tuple of (image, label) \n",
@@ -216,6 +219,8 @@
     }
    ],
    "source": [
+    "# Section 14.1\n",
+    "\n",
     "# Defining the ID to Label map\n",
     "id2label_map = {\n",
     "    0: \"T-shirt/top\",\n",
@@ -354,6 +359,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Section 14.2\n",
+    "\n",
     "from tensorflow.keras import layers, models\n",
     "\n",
     "\n",
@@ -416,6 +423,8 @@
     }
    ],
    "source": [
+    "# Section 14.2\n",
+    "\n",
     "log_datetimestamp = datetime.strftime(datetime.now(), log_datetimestamp_format)\n",
     "dense_log_dir = os.path.join(\"logs\",\"dense_{}\".format(log_datetimestamp))\n",
     "\n",
@@ -478,6 +487,8 @@
     }
    ],
    "source": [
+    "# Section 14.2\n",
+    "\n",
     "import tensorflow.keras.backend as K\n",
     "K.clear_session()\n",
     "\n",
@@ -589,6 +600,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Section 14.3\n",
+    "\n",
     "from tensorflow.keras import layers, models\n",
     "import tensorflow.keras.backend as K\n",
     "\n",
@@ -667,6 +680,9 @@
     }
    ],
    "source": [
+    "# Section 14.3\n",
+    "\n",
+    "# Code listing 14.2\n",
     "def train_model(model, dataset, log_dir, log_layer_name, epochs):    \n",
     "    \n",
     "    # Define the writer\n",
@@ -744,6 +760,8 @@
     }
    ],
    "source": [
+    "# Section 14.4\n",
+    "\n",
     "# Downloading the data\n",
     "\n",
     "import os\n",
@@ -791,6 +809,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Code listing 14.3\n",
     "def get_cnn_model():\n",
     "    \n",
     "    conv_model = models.Sequential([\n",
@@ -861,6 +880,8 @@
     }
    ],
    "source": [
+    "# Section 14.4\n",
+    "\n",
     "import os\n",
     "from tensorflow.keras import layers, models\n",
     "import tensorflow.keras.backend as K\n",
@@ -1017,6 +1038,8 @@
     }
    ],
    "source": [
+    "# Section 14.4\n",
+    "\n",
     "from tensorflow.keras import mixed_precision\n",
     "policy = mixed_precision.Policy('mixed_float16')\n",
     "mixed_precision.set_global_policy(policy)\n",
@@ -1029,7 +1052,7 @@
     "\n",
     "conv_model.compile(loss=\"sparse_categorical_crossentropy\", optimizer='adam', metrics=['accuracy'])\n",
     "\n",
-    "\n",
+    "# Code listing 14.4\n",
     "def get_flower_datasets(image_dir, batch_size, flatten_images=False):\n",
     "\n",
     "    # Get the training dataset, shuffle it, and output a tuple of (image, label)\n",
@@ -1098,6 +1121,8 @@
     }
    ],
    "source": [
+    "# Section 14.4\n",
+    "\n",
     "print(\"Input to the layers have the data type: {}\".format(conv_model.get_layer(\"conv2d_1\").input.dtype))\n",
     "print(\"Variables in the layers have the data type: {}\".format(conv_model.get_layer(\"conv2d_1\").trainable_variables[0].dtype))\n",
     "print(\"Output of the layers have the data type: {}\".format(conv_model.get_layer(\"conv2d_1\").output.dtype))"
@@ -1136,6 +1161,8 @@
     }
    ],
    "source": [
+    "# Section 14.5\n",
+    "\n",
     "import os\n",
     "import requests\n",
     "import zipfile\n",
@@ -1521,6 +1548,9 @@
     }
    ],
    "source": [
+    "# Section 14.5\n",
+    "\n",
+    "# Code listing 14.5\n",
     "from tensorboard.plugins import projector\n",
     "\n",
     "log_dir=os.path.join('logs', 'embeddings')\n",
