Added missing imports to remove warnings. Ch3 download file name has changed. changed download logic to accommodate that

--- a/Ch04-Deep-Networks-with-Keras/4.1.Fully_connected_networks.ipynb
+++ b/Ch04-Deep-Networks-with-Keras/4.1.Fully_connected_networks.ipynb
@@ -35,12 +35,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Warning: random module is not imported. Setting the seed for random failed.\n",
-      "TensorFlow version: 2.4.1\n"
+      "TensorFlow version: 2.5.0\n"
      ]
     }
    ],
    "source": [
+    "import random\n",
     "import tensorflow as tf\n",
     "from tensorflow.keras.datasets.mnist import load_data\n",
     "import tensorflow_datasets as tfds\n",
