--- a/Ch04-Deep-Networks-with-Keras/4.2.Convolution_networks.ipynb
+++ b/Ch04-Deep-Networks-with-Keras/4.2.Convolution_networks.ipynb
@@ -44,13 +44,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Warning: Numpy is not imported. Setting the seed for Numpy failed.\n",
-      "Warning: random module is not imported. Setting the seed for random failed.\n",
-      "TensorFlow version: 2.4.1\n"
+      "TensorFlow version: 2.5.0\n"
      ]
     }
    ],
    "source": [
+    "import random\n",
+    "import numpy as np\n",
     "import tensorflow as tf\n",
     "import tensorflow_datasets as tfds\n",
     "from tensorflow.keras import layers, models\n",
