--- a/Ch04-Deep-Networks-with-Keras/4.3.Recurrent_networks.ipynb
+++ b/Ch04-Deep-Networks-with-Keras/4.3.Recurrent_networks.ipynb
@@ -33,12 +33,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Warning: random module is not imported. Setting the seed for random failed.\n",
-      "TensorFlow version: 2.4.1\n"
+      "TensorFlow version: 2.5.0\n"
      ]
     }
    ],
    "source": [
+    "import random\n",
     "import os\n",
     "import pandas as pd\n",
     "from tensorflow.keras import layers, models\n",
