--- a/Ch06-Image-Classification-with-CNNs/6.1.Image_Classification.ipynb
+++ b/Ch06-Image-Classification-with-CNNs/6.1.Image_Classification.ipynb
@@ -27,22 +27,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2.1.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import tensorflow as tf\n",
     "import tensorflow_hub as hub\n",
     "import requests\n",
-    "print(tf.__version__)\n",
     "import zipfile\n",
     "import requests\n",
     "import os\n",
@@ -63,10 +54,22 @@
     "import pickle\n",
     "from tensorflow.keras.models import load_model, Model\n",
     "\n",
-    "random_seed = 4321\n",
-    "np.random.seed(random_seed)\n",
-    "seed=4321\n",
-    "random.seed(seed)\n",
+    "def fix_random_seed(seed):\n",
+    "    try:\n",
+    "        np.random.seed(seed)\n",
+    "    except NameError:\n",
+    "        print(\"Warning: Numpy is not imported. Setting the seed for Numpy failed.\")\n",
+    "    try:\n",
+    "        tf.random.set_seed(seed)\n",
+    "    except NameError:\n",
+    "        print(\"Warning: TensorFlow is not imported. Setting the seed for TensorFlow failed.\")\n",
+    "    try:\n",
+    "        random.seed(seed)\n",
+    "    except NameError:\n",
+    "        print(\"Warning: random module is not imported. Setting the seed for random failed.\")\n",
+    "\n",
+    "# Fixing the random seed\n",
+    "fix_random_seed(4321)\n",
     "\n",
     "gpus = tf.config.experimental.list_physical_devices('GPU')\n",
     "if gpus:\n",
