--- a/Ch10-NLP-with-TF2-Language-Modelling/10.1.Language_modelling.ipynb
+++ b/Ch10-NLP-with-TF2-Language-Modelling/10.1.Language_modelling.ipynb
@@ -26,15 +26,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.4.1\n"
+      "TensorFlow version: 2.5.0\n"
      ]
     }
    ],
    "source": [
     "import tensorflow as tf\n",
-    "#import tensorflow_hub as hub\n",
     "import requests\n",
-    "print(tf.__version__)\n",
     "import zipfile\n",
     "import requests\n",
     "import os\n",
@@ -88,7 +86,9 @@
     "\n",
     "# Fixing the random seed\n",
     "random_seed=4321\n",
-    "fix_random_seed(random_seed)"
+    "fix_random_seed(random_seed)\n",
+    "\n",
+    "print(\"TensorFlow version: {}\".format(tf.__version__))"
    ]
   },
   {
