--- a/Ch13-Transormers-with-TF2-and-Huggingface/13.2_Question_answering_with_BERT.ipynb
+++ b/Ch13-Transormers-with-TF2-and-Huggingface/13.2_Question_answering_with_BERT.ipynb
@@ -38,6 +38,8 @@
     }
    ],
    "source": [
+    "import random\n",
+    "import numpy as np\n",
     "import transformers\n",
     "from datasets import load_dataset\n",
     "from transformers import DistilBertTokenizerFast\n",
