--- a/Ch14-Tensorboard/14.1_Tensorboard.ipynb
+++ b/Ch14-Tensorboard/14.1_Tensorboard.ipynb
@@ -59,21 +59,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The tensorboard extension is already loaded. To reload it, use:\n",
-      "  %reload_ext tensorboard\n",
-      "Warning: random module is not imported. Setting the seed for random failed.\n",
-      "2.5.0\n"
+      "TensorFlow version: 2.5.0\n"
      ]
     }
    ],
    "source": [
+    "import random\n",
     "import tensorflow as tf\n",
     "import numpy as np\n",
     "import tensorflow_datasets as tfds\n",
@@ -113,7 +111,7 @@
     "fix_random_seed(random_seed)\n",
     "\n",
     "log_datetimestamp_format = \"%Y%m%d%H%M%S\"\n",
-    "print(tf.__version__)"
+    "print(\"TensorFlow version: {}\".format(tf.__version__))"
    ]
   },
   {
