--- a/Ch15-TFX-for-MLOps-in-TF2/tfx/15.1_MLOps_with_tensorflow.ipynb
+++ b/Ch15-TFX-for-MLOps-in-TF2/tfx/15.1_MLOps_with_tensorflow.ipynb
@@ -32,28 +32,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.4.2\n"
+      "TensorFlow version: 2.4.2\n"
      ]
     }
    ],
    "source": [
     "import tensorflow as tf\n",
-    "#import tensorflow_hub as hub\n",
     "import requests\n",
-    "print(tf.__version__)\n",
     "import requests\n",
     "import os\n",
     "import time\n",
     "import pandas as pd\n",
     "\n",
-    "assert_msg = \"Pandas version should be < 1.0 for tfx\"\n",
+    "assert_msg = \"Pandas version should be < 1.0 for tfx. Did you activate the manning.tf2.tfx environment?\"\n",
     "assert pd.__version__.startswith('0.')\n",
     "\n",
     "import random\n",
@@ -96,7 +94,9 @@
     "\n",
     "# Fixing the random seed\n",
     "random_seed=4321\n",
-    "fix_random_seed(random_seed)\n"
+    "fix_random_seed(random_seed)\n",
+    "\n",
+    "print(\"TensorFlow version: {}\".format(tf.__version__))"
    ]
   },
   {
@@ -25539,7 +25539,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.12"
+   "version": "3.6.13"
   }
  },
  "nbformat": 4,
