--- a/Ch07-Improving-CNNs-and-Explaining/7.1.Image_Classification_Advance.ipynb
+++ b/Ch07-Improving-CNNs-and-Explaining/7.1.Image_Classification_Advance.ipynb
@@ -32,7 +32,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.2.1\n"
+      "TensorFlow version: 2.5.0\n"
      ]
     }
    ],
@@ -40,7 +40,7 @@
     "import tensorflow as tf\n",
     "#import tensorflow_hub as hub\n",
     "import requests\n",
-    "print(tf.__version__)\n",
+    "print(\"TensorFlow version: {}\".format(tf.__version__))\n",
     "import zipfile\n",
     "import requests\n",
     "import os\n",
