--- a/Ch07-Improving-CNNs-and-Explaining/7.3.Interpreting_CNNs_GradCAM.ipynb
+++ b/Ch07-Improving-CNNs-and-Explaining/7.3.Interpreting_CNNs_GradCAM.ipynb
@@ -32,15 +32,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.2.1\n"
+      "TensorFlow version: 2.5.0\n"
      ]
     }
    ],
    "source": [
     "import tensorflow as tf\n",
-    "#import tensorflow_hub as hub\n",
     "import requests\n",
-    "print(tf.__version__)\n",
     "import zipfile\n",
     "import requests\n",
     "import os\n",
@@ -89,7 +87,9 @@
     "\n",
     "# Fixing the random seed\n",
     "random_seed=4321\n",
-    "fix_random_seed(random_seed)"
+    "fix_random_seed(random_seed)\n",
+    "\n",
+    "print(\"TensorFlow version: {}\".format(tf.__version__))"
    ]
   },
   {
