--- a/Ch09-NLP-with-TF2-Sentiment-Analysis/9.1.Sentiment_analysis.ipynb
+++ b/Ch09-NLP-with-TF2-Sentiment-Analysis/9.1.Sentiment_analysis.ipynb
@@ -39,9 +39,7 @@
    ],
    "source": [
     "import tensorflow as tf\n",
-    "#import tensorflow_hub as hub\n",
     "import requests\n",
-    "print(tf.__version__)\n",
     "import zipfile\n",
     "import requests\n",
     "import os\n",
@@ -95,7 +93,9 @@
     "\n",
     "# Fixing the random seed\n",
     "random_seed=4321\n",
-    "fix_random_seed(random_seed)"
+    "fix_random_seed(random_seed)\n",
+    "\n",
+    "print(\"TensorFlow version: {}\".format(tf.__version__))"
    ]
   },
   {
