--- a/Ch07-Improving-CNNs-and-Explaining/7.1.Image_Classification_Advance.ipynb
+++ b/Ch07-Improving-CNNs-and-Explaining/7.1.Image_Classification_Advance.ipynb
@@ -230,8 +230,8 @@
     "        if random_occlude:\n",
     "            # Randomly occluding sections in the image\n",
     "            occ_size = 10\n",
-    "            occ_h, occ_w = np.random.randint(0, x.shape[0]-occ_size), np.random.randint(0, x.shape[0]-occ_size)\n",
-    "            x[::2,occ_h:occ_h+occ_size,occ_w:occ_w+occ_size,:] = np.random.choice([0.,128.,255.])\n",
+    "            occ_h, occ_w = np.random.randint(0, x.shape[1]-occ_size), np.random.randint(0, x.shape[2]-occ_size)\n",
+    "            x[:,occ_h:occ_h+occ_size,occ_w:occ_w+occ_size,:] = np.random.choice([0.,128.,255.])\n",
     "        \n",
     "        # Image centering\n",
     "        x -= np.mean(x, axis=(1,2,3), keepdims=True)\n",
@@ -1033,8 +1033,8 @@
     "        if random_occlude:\n",
     "            # Randomly occluding sections in the image\n",
     "            occ_size = 10\n",
-    "            occ_h, occ_w = np.random.randint(0, x.shape[0]-occ_size), np.random.randint(0, x.shape[0]-occ_size)\n",
-    "            x[::2,occ_h:occ_h+occ_size,occ_w:occ_w+occ_size,:] = np.random.choice([0.,128.,255.])\n",
+    "            occ_h, occ_w = np.random.randint(0, x.shape[1]-occ_size), np.random.randint(0, x.shape[2]-occ_size)\n",
+    "            x[:,occ_h:occ_h+occ_size,occ_w:occ_w+occ_size,:] = np.random.choice([0.,128.,255.])\n",
     "        \n",
     "        # Image centering\n",
     "        #x -= np.mean(x, axis=(1,2,3), keepdims=True)\n",
@@ -1784,7 +1784,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1798,7 +1798,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.12"
+   "version": "3.7.11"
   }
  },
  "nbformat": 4,
