--- a/Ch07-Improving-CNNs-and-Explaining/7.2.Transfer_Learning.ipynb
+++ b/Ch07-Improving-CNNs-and-Explaining/7.2.Transfer_Learning.ipynb
@@ -275,8 +275,8 @@
     "        if random_occlude:\n",
     "            # Randomly occluding sections in the image\n",
     "            occ_size = 10\n",
-    "            occ_h, occ_w = np.random.randint(0, x.shape[0]-occ_size), np.random.randint(0, x.shape[0]-occ_size)\n",
-    "            x[::2,occ_h:occ_h+occ_size,occ_w:occ_w+occ_size,:] = np.random.choice([0.,128.,255.])\n",
+    "            occ_h, occ_w = np.random.randint(0, x.shape[1]-occ_size), np.random.randint(0, x.shape[2]-occ_size)\n",
+    "            x[:,occ_h:occ_h+occ_size,occ_w:occ_w+occ_size,:] = np.random.choice([0.,128.,255.])\n",
     "        \n",
     "        # https://github.com/tensorflow/tensorflow/blob/2b96f3662bd776e277f86997659e61046b56c315/tensorflow/python/keras/applications/imagenet_utils.py#L181\n",
     "        x /= 127.5\n",
@@ -867,7 +867,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -881,7 +881,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.12"
+   "version": "3.7.11"
   }
  },
  "nbformat": 4,
