--- a/Ch09-NLP-with-TF2-Sentiment-Analysis/9.1.Sentiment_analysis.ipynb
+++ b/Ch09-NLP-with-TF2-Sentiment-Analysis/9.1.Sentiment_analysis.ipynb
@@ -484,6 +484,7 @@
     "# We need to download several nltk artefacts to perform the preprocessing\n",
     "nltk.download('averaged_perceptron_tagger', download_dir='nltk')\n",
     "nltk.download('wordnet', download_dir='nltk')\n",
+    "nltk.download('omw-1.4', download_dir='nltk')\n",
     "nltk.download('stopwords', download_dir='nltk')\n",
     "nltk.download('punkt', download_dir='nltk')\n",
     "nltk.data.path.append(os.path.abspath('nltk'))\n",
@@ -1436,7 +1437,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Training the model"
+    "## Training the model\n",
+    "\n",
+    "Note: If you see an error like `Failed to call ThenRnnForward with model config: ...` this is due to insufficient memory. Try reducing the batch size."
    ]
   },
   {
@@ -1993,7 +1996,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2007,7 +2010,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.12"
+   "version": "3.7.11"
   }
  },
  "nbformat": 4,
