Checked all code against tf 2.9 and fixed issues

--- a/Ch05-Fundamentals-of-Transformers/5.1.Transformer.ipynb
+++ b/Ch05-Fundamentals-of-Transformers/5.1.Transformer.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -519,27 +519,28 @@
      "text": [
       "Model: \"MinTransformer\"\n",
       "__________________________________________________________________________________________________\n",
-      "Layer (type)                    Output Shape         Param #     Connected to                     \n",
+      " Layer (type)                   Output Shape         Param #     Connected to                     \n",
       "==================================================================================================\n",
-      "input_1 (InputLayer)            [(None, 25)]         0                                            \n",
-      "__________________________________________________________________________________________________\n",
-      "embedding (Embedding)           (None, 25, 512)      153600      input_1[0][0]                    \n",
-      "__________________________________________________________________________________________________\n",
-      "input_2 (InputLayer)            [(None, 25)]         0                                            \n",
-      "__________________________________________________________________________________________________\n",
-      "encoder_layer (EncoderLayer)    (None, 25, 512)      2886144     embedding[0][0]                  \n",
-      "__________________________________________________________________________________________________\n",
-      "embedding_1 (Embedding)         (None, 25, 512)      204800      input_2[0][0]                    \n",
-      "__________________________________________________________________________________________________\n",
-      "encoder_layer_1 (EncoderLayer)  (None, 25, 512)      2886144     encoder_layer[0][0]              \n",
-      "__________________________________________________________________________________________________\n",
-      "decoder_layer (DecoderLayer)    (None, 25, 512)      3672576     embedding_1[0][0]                \n",
-      "                                                                 encoder_layer_1[0][0]            \n",
-      "__________________________________________________________________________________________________\n",
-      "decoder_layer_1 (DecoderLayer)  (None, 25, 512)      3672576     decoder_layer[0][0]              \n",
-      "                                                                 encoder_layer_1[0][0]            \n",
-      "__________________________________________________________________________________________________\n",
-      "dense (Dense)                   (None, 25, 400)      205200      decoder_layer_1[0][0]            \n",
+      " input_1 (InputLayer)           [(None, 25)]         0           []                               \n",
+      "                                                                                                  \n",
+      " embedding (Embedding)          (None, 25, 512)      153600      ['input_1[0][0]']                \n",
+      "                                                                                                  \n",
+      " input_2 (InputLayer)           [(None, 25)]         0           []                               \n",
+      "                                                                                                  \n",
+      " encoder_layer (EncoderLayer)   (None, 25, 512)      2886144     ['embedding[0][0]']              \n",
+      "                                                                                                  \n",
+      " embedding_1 (Embedding)        (None, 25, 512)      204800      ['input_2[0][0]']                \n",
+      "                                                                                                  \n",
+      " encoder_layer_1 (EncoderLayer)  (None, 25, 512)     2886144     ['encoder_layer[0][0]']          \n",
+      "                                                                                                  \n",
+      " decoder_layer (DecoderLayer)   (None, 25, 512)      3672576     ['embedding_1[0][0]',            \n",
+      "                                                                  'encoder_layer_1[0][0]']        \n",
+      "                                                                                                  \n",
+      " decoder_layer_1 (DecoderLayer)  (None, 25, 512)     3672576     ['decoder_layer[0][0]',          \n",
+      "                                                                  'encoder_layer_1[0][0]']        \n",
+      "                                                                                                  \n",
+      " dense (Dense)                  (None, 25, 400)      205200      ['decoder_layer_1[0][0]']        \n",
+      "                                                                                                  \n",
       "==================================================================================================\n",
       "Total params: 13,681,040\n",
       "Trainable params: 13,681,040\n",
@@ -598,11 +599,18 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -616,7 +624,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.12"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
